<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.coremedia.labs.translation.gcc</groupId>
  <artifactId>gcc</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <description><![CDATA[
    This module enables support for translating content via
    GlobalLink Connect Cloud REST API. It comes with a modules like
    gcc-api which contains the REST requests and responses and
    gcc-workflow which contains the corresponding workflow.
  ]]></description>

  <modules>
    <module>apps/studio-server</module>
    <module>apps/user-changes</module>
    <module>apps/workflow-server</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <docs.directory>${project.basedir}/website/docs</docs.directory>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>2.7.1</version>
          <configuration>
            <errorRemedy>ignore</errorRemedy>
            <excludedGroups>^com\.coremedia\.</excludedGroups>
            <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
            <fileTemplate>src/main/templates/third-party-md.ftl</fileTemplate>
            <includeTransitiveDependencies>false</includeTransitiveDependencies>
            <licenseMerges>
              <licenseMerge>Apache License, Version 2.0|The Apache Software License, Version 2.0</licenseMerge>
              <licenseMerge>Apache License, Version 2.0|Apache Public License 2.0</licenseMerge>
              <licenseMerge>Apache License, Version 2.0|Apache-2.0</licenseMerge>
              <licenseMerge>Eclipse Distribution License, Version 1.0|EDL 1.0</licenseMerge>
              <licenseMerge>GNU Lesser General Public License, Version 2.1|GNU LESSER GENERAL PUBLIC
                LICENSE, Version 2.1</licenseMerge>
              <licenseMerge>GNU Lesser General Public License, Version 2.1|GNU Lesser General Public License</licenseMerge>
              <licenseMerge>MIT License|The MIT License</licenseMerge>
              <licenseMerge>MIT License|MIT</licenseMerge>
            </licenseMerges>
            <licensesOutputFile>${docs.directory}/third-party/files/licenses.xml</licensesOutputFile>
            <licensesOutputDirectory>${docs.directory}/third-party/files</licensesOutputDirectory>
            <licenseUrlFileNames>
              <spdx/> <!-- activate built-in file name entries based on spdx.org license IDs -->
            </licenseUrlFileNames>
            <outputDirectory>${docs.directory}/third-party</outputDirectory>
            <removeOrphanLicenseFiles>true</removeOrphanLicenseFiles>
            <sortByGroupIdAndArtifactId>true</sortByGroupIdAndArtifactId>
            <thirdPartyFilename>third-party.md</thirdPartyFilename>
            <useDefaultContentSanitizers>true</useDefaultContentSanitizers>
            <useDefaultUrlReplacements>true</useDefaultUrlReplacements>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.6.2</version>
          <configuration>
            <rules>
              <requireMavenVersion>
                <!--
                  Align with requirements from Blueprint workspace.
                  Possibly validate via `mvn versions:display-plugin-updates`
                  regarding required minimum versions.
                -->
                <version>3.9.11</version>
              </requireMavenVersion>
              <requireJavaVersion>
                <version>[21,)</version>
              </requireJavaVersion>
            </rules>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>docs-third-party</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>generate-docs-licenses</id>
                <goals>
                  <goal>aggregate-add-third-party</goal>
                  <goal>aggregate-download-licenses</goal>
                </goals>
                <phase>generate-resources</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>gcc-strict-checks</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <failOnWarning>true</failOnWarning>
              <showDeprecation>true</showDeprecation>
              <showWarnings>true</showWarnings>
              <compilerArgs>
                <!-- Disable annotation processing to avoid version compatibility warnings -->
                <!--
                     Suppresses failure on:
                     Supported source version 'RELEASE_8' from annotation processor
                     'org.glassfish.corba.annotation.processing.ExceptionWrapperProcessor'
                     less than -source '17'
                -->
                <arg>-proc:none</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
